# polybot

./: .env.example  .gitignore  Cargo.toml  README.md  bot.log.bak  config.toml  ptb_log_btc_usd_1774711500.csv  ptb_log_btcusdt_1774713300.csv  ptb_log_btcusdt_1774713900.csv  query_shadow.py
polymarket-whale-detector/: .env.example  .gitignore  README.md  requirements.txt
polymarket-whale-detector/src/: __init__.py  config.py  known_wallets.py  main.py  market_cache.py  supabase_client.py  telegram_bot.py  trade_monitor.py  wallet_analyzer.py
polymarket-whale-detector/supabase/: whale_alerts.sql
polymarket-whale-detector/systemd/: whale-detector.service
src/: cli.rs  config.rs  db.rs  hourly_discovery.rs  kalshi.rs  main.rs  market.rs  orderbook.rs  orders.rs  positions.rs  redeem.rs  risk.rs  scanner.rs  shadow_timing.rs  signal.rs  state.rs  telegram.rs  types.rs
src/feeds/: binance.rs  bybit.rs  chainlink.rs  chainlink_streams.rs  mod.rs  polymarket.rs
tests/: market_tests.rs  risk_tests.rs  signal_tests.rs
tools/: fetch_ptb.py  ptb_tracker.py
