[package]
name = "polymarket-btc-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Multi-market Polymarket Up/Down maker bot with edge-ranked order routing"

[[bin]]
name = "polymarket-btc-bot"
path = "src/main.rs"

[dependencies]
polymarket-client-sdk = { version = "0.4", features = [
    "clob",
    "ws",
    "gamma",
    "ctf",
    "tracing",
] }
alloy = { version = "1", features = ["provider-http", "signer-local"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"

rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rust_decimal = "1"
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
url = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
